--- a/web-developer.html
+++ b/web-developer.html
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pcmcanada.applytojob.com/apply/0cWVfq5D61/Web-Developer-Contractor'>Web Developer (Contractor) - PCM Canada - Career Page</a></h5> 
+<h5><a href='http://pcmcanada.applytojob.com/apply/0cWVfq5D61/Web-Developer-Contractor'>Web Developer (Contractor) - PCM Canada - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada Canada  Canada  Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -62,11 +62,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AngeionGroup/743999698528265-web-developer'>Angeion Group Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AngeionGroup/743999698528265-web-developer'>Angeion Group Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PAUnited States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TalentGenGlobalUSA/743999698522823-web-design-developer-intern-virtual-great-reference-portfolio-building'>TalentGen Global, USA Web Design/Developer, Intern (virtual) GREAT reference portfolio building | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TalentGenGlobalUSA/743999698522823-web-design-developer-intern-virtual-great-reference-portfolio-building'>TalentGen Global, USA Web Design/Developer, Intern (virtual) GREAT reference portfolio building | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Houston, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://artisantalent.com/jobs/chicago/senior-technology-architect-salesforce/46173?utm_content=104483032&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artisantalent.com/jobs/chicago/senior-technology-architect-salesforce/46173?utm_content=104483032&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -90,7 +90,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmartIms1/743999698485668-web-developer'>Smart Ims Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SmartIms1/743999698485668-web-developer'>Smart Ims Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dover, DE</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -146,7 +146,7 @@
 <p><span class="badge badge-light">Fulton, MDFulton, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/impinj/job/oAA3afw7'>Impinj Careers - Front End Web Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/impinj/job/oAA3afw7'>Impinj Careers - Front End Web Developer</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -155,7 +155,7 @@
 <p>19 hours ago ... Pepper has a job opening for PHP Web Developer (m/f/x) in Winnipeg (published
 : 08.08.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=op37afwt&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=npE1nMwI'>MORI Associates, Inc. Careers - Web Applications Developer - Linux/Unix - TS SCI clearance required - NASA/JPL</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=op37afwt&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=npE1nMwI'>MORI Associates, Inc. Careers - Web Applications Developer - Linux/Unix - TS SCI clearance required - NASA/JPL</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -163,7 +163,7 @@
 <p><span class="badge badge-light">Boston, MA, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://foreignpolicy.recruitee.com/o/web-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://foreignpolicy.recruitee.com/o/web-developer'>
       Web Developer - Foreign Policy
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -201,7 +201,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=ovsFafww&__jvst=Employee&__jvsd=sASKdiwc&__jvsc=Twitter&bid=nMsgnMw8'>Ingram Micro Careers - Senior Web frontend developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=ovsFafww&__jvst=Employee&__jvsd=sASKdiwc&__jvsc=Twitter&bid=nMsgnMw8'>Ingram Micro Careers - Senior Web frontend developer</a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -209,7 +209,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698372664-web-developer'>Devoteam Web developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698372664-web-developer'>Devoteam Web developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Malm?Copenhagen</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -255,7 +255,7 @@
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698335805-software-engineer-web-applications-ref20023i-visa-digital-developer-platform-vddp-'>Visa Software Engineer, Web Applications (REF20023I) - Visa Digital Developer Platform (VDDP) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698335805-software-engineer-web-applications-ref20023i-visa-digital-developer-platform-vddp-'>Visa Software Engineer, Web Applications (REF20023I) - Visa Digital Developer Platform (VDDP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -269,7 +269,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://proobject.com/careers/prime-web-developer-level-1-sharepoint-javascript-html-css/'>ProObject, Inc. |   PRIME Web Developer Level 1 (SharePoint, JavaScript, HTML, CSS)</a></h5> 
+<h5><a href='https://proobject.com/careers/prime-web-developer-level-1-sharepoint-javascript-html-css/'>ProObject, Inc. |   PRIME Web Developer Level 1 (SharePoint, JavaScript, HTML, CSS)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -327,11 +327,11 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://nearearthautonomy.applytojob.com/apply/iH2ySRbAXO/Full-Stack-Web-Developer'>Full Stack Web Developer - Near Earth Autonomy - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://nearearthautonomy.applytojob.com/apply/iH2ySRbAXO/Full-Stack-Web-Developer'>Full Stack Web Developer - Near Earth Autonomy - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=op37afwt&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=n7aAlMwt'>MORI Associates, Inc. Careers - Web Applications Developer - Linux/Unix - TS SCI clearance required - NASA/JPL</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=op37afwt&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=n7aAlMwt'>MORI Associates, Inc. Careers - Web Applications Developer - Linux/Unix - TS SCI clearance required - NASA/JPL</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -349,7 +349,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artisantalent.com/jobs/chicago/junior-global-email-marketing-specialist/46184?utm_content=104154504&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
+<h5><a href='https://artisantalent.com/jobs/chicago/junior-global-email-marketing-specialist/46184?utm_content=104154504&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -379,7 +379,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">Eden Prairie, Minnesota</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://westphalia-datalab.join.com/jobs/456444-web-developer-w-m-d'>Job @ Westphalia DataLab  (M?nster): Web Developer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://westphalia-datalab.join.com/jobs/456444-web-developer-w-m-d'>Job @ Westphalia DataLab  (M?nster): Web Developer... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -458,7 +458,7 @@ Develop process requirements and implement product development and release
 <p>3 days ago ... STAT (www.statnews.com) is a cutting-edge media company that is committed to 
 finding and telling compelling stories about health, medicine, and scientific?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
